# path-tracer-rust

./: .gitignore  Cargo.toml  README.md  build.rs
scenes/: cartesian.json  cornell.json  mesh.json  single-sphere.json  three-spheres.json  two-spheres.json
src/: cmd_render.rs  helpers.rs  load_off.rs  main.rs  render_tab.rs  scenes.rs  shader.wgsl  test.rs  viewport.rs  viewport_tab.rs  views.rs
src/render/: load_off.rs  mod.rs  scenes.rs  test.rs
src/shaders/: objects.wesl  objects_types.wesl  outline.wesl  sky.wesl
src/views/: render_tab.rs  viewport_tab.rs
src/views/viewport/: mod.rs  viewport_render.rs
src/views/viewport/shaders/: objects.wgsl  objects_types.wgsl  outline.wgsl  sky.wgsl
