[package]
name = "path-tracer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "async-std"] }
rand = "0.8.5"
chrono = "0.4.19"
rayon = "1.5.1"
